# mcp-congress.gov

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-18-congress-mcp-server.md
docs/superpowers/specs/: 2026-05-18-congress-mcp-server-design.md
seed/: seed_policy_areas.py
src/mcp_congress/: bills.py  cache.py  client.py  committees.py  compound.py  members.py  server.py
src/mcp_congress/data/: bill_actions_cache.json  bill_cache.json  member_cache.json  policy_areas.json
src/mcp_congress/seed/: seed_bill_actions.py  seed_bills.py  seed_members.py  seed_policy_areas.py
tests/: conftest.py  test_bills.py  test_cache.py  test_client.py  test_committees.py  test_compound.py  test_members.py
tests/integration/: test_integration.py
